--- a/docs/_static/css/leftSidebar.css
+++ b/docs/_static/css/leftSidebar.css
@@ -2,16 +2,115 @@
   border-radius: 16px;
 }
 
-@media screen and (min-width: 1100px) {
+/* @media screen and (min-width: 767px) and (max-width: 991px) {
   .wy-nav-side {
-    left: calc(50% - 570px);
+    left: 14%;
+  }
+} */
+
+/* @media screen and (min-width: 790px) and (max-width: 799px) {
+  .wy-nav-side {
+    left: 6%;
   }
 }
 
+@media screen and (min-width: 800px) and (max-width: 819px) {
+  .wy-nav-side {
+    left: 6.5%;
+  }
+}
+
+@media screen and (min-width: 820px) and (max-width: 829px) {
+  .wy-nav-side {
+    left: 7%;
+  }
+}
+
+@media screen and (min-width: 830px) and (max-width: 839px) {
+  .wy-nav-side {
+    left: 8%;
+  }
+}
+
+@media screen and (min-width: 840px) and (max-width: 859px) {
+  .wy-nav-side {
+    left: 8.5%;
+  }
+}
+
+@media screen and (min-width: 860px) and (max-width: 869px) {
+  .wy-nav-side {
+    left: 9%;
+  }
+}
+
+@media screen and (min-width: 870px) and (max-width: 879px) {
+  .wy-nav-side {
+    left: 9.5%;
+  }
+}
+
+@media screen and (min-width: 880px) and (max-width: 899px) {
+  .wy-nav-side {
+    left: 10.5%;
+  }
+}
+
+@media screen and (min-width: 900px) and (max-width: 919px) {
+  .wy-nav-side {
+    left: 11%;
+  }
+}
+
+@media screen and (min-width: 920px) and (max-width: 929px) {
+  .wy-nav-side {
+    left: 12%;
+  }
+}
+
+@media screen and (min-width: 930px) and (max-width: 939px) {
+  .wy-nav-side {
+    left: 12.5%;
+  }
+}
+
+@media screen and (min-width: 940px) and (max-width: 979px) {
+  .wy-nav-side {
+    left: 13%;
+  }
+}
+
+@media screen and (min-width: 980px) and (max-width: 991px) {
+  .wy-nav-side {
+    left: 14%;
+  }
+} */
+
+/* @media screen and (min-width: 992px) and (max-width: 1270px) {
+  .wy-nav-side {
+    left: 65px;
+  }
+} */
+
+/* @media screen and (min-width: 1270px) and (max-width: 1499px) {
+  .wy-nav-side {
+    left: calc(50% - 570px);
+  }
+} */
+
+/* @media screen and (min-width: 1500px) {
+  .wy-nav-side {
+    left: calc(50% - 670px);
+  }
+} */
+
 .wy-nav-side {
   padding: 20px 19px;
-  position: fixed;
+  top: 0;
+  position: sticky;
   width: 294px;
+  height: 100vh;
+  position:-webkit-sticky;
 }
 
 .wy-form input {
